fixed modals going off screen

--- a/client/src/styles/EmbedModal.css
+++ b/client/src/styles/EmbedModal.css
@@ -1,4 +1,4 @@
-.em{
+.em {
     position: fixed;
     font-family: "Motiva Sans", Sans-serif;
     font-weight: normal;
@@ -7,9 +7,9 @@
     color: #c6d4df;
     font-size: 12px;
     z-index: 99;
-    position: fixed;
-    top: 550px;
-    left: 925px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 .emTopBar{
     width: 100%;
