--- a/client/src/styles/GameDescriptionModal.css
+++ b/client/src/styles/GameDescriptionModal.css
@@ -12,13 +12,13 @@ div {
     min-width: 0;
     background: radial-gradient(circle at top left, rgba(74, 81, 92, 0.4) 0%, rgba(75, 81, 92, 0) 60%), #25282e;
     padding: 0;
-    margin: 0;
+    margin: auto;
     color: #c6d4df;
     font-size: 12px;
     z-index: 99;
-    position: fixed;
-    top: 250px;
-    left: 875px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .modalTopBar {
