--- a/client/src/styles/ReportModal.css
+++ b/client/src/styles/ReportModal.css
@@ -5,7 +5,7 @@
 div{
     display: block;
 }
-.rm{
+.rm {
     position: fixed;
     min-width: 500px;
     background: radial-gradient(circle at top left, rgba(74, 81, 92, 0.4) 0%, rgba(75, 81, 92, 0) 60%), #25282e;
@@ -14,9 +14,9 @@ div{
     color: #c6d4df;
     font-size: 12px;
     z-index: 99;
-    position: fixed;
-    top: 350px;
-    left: 950px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 .rmTopBar{
     width: 100%;
