--- a/client/src/styles/ShareModal.css
+++ b/client/src/styles/ShareModal.css
@@ -1,5 +1,4 @@
-.smContainer{
-    
+.smContainer {
     position: fixed;
     z-index: 1000;
     max-width: 1008px;
@@ -8,8 +7,9 @@
     font-size: 12px;
     min-width: 500px;
     background: radial-gradient(circle at top left, rgba(74, 81, 92, 0.4) 0%, rgba(75, 81, 92, 0) 60%), #25282e;
-    top: 550px;
-    left: 1025px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 .smTopBar{
     width: 100%;
